유관기관안내 수정

--- a/portal/html/USR-1361-H-CONTN.html
+++ b/portal/html/USR-1361-H-CONTN.html
@@ -257,7 +257,7 @@
                             <li><a href="./USR-1320-B-LIST.html">공지사항</a></li>
                             <li><a href="./USR-1330-F-LIST.html">커뮤니티</a></li>
                             <li><a href="./USR-1341-F-LIST.html">벤처투자 TALK</a></li>
-                            <!-- <li><a href="./USR-1350-F-DASH.html">벤처투자 불법신고</a></li> -->
+                            <li><a href="./USR-1350-F-DASH.html">벤처투자 불법신고</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -758,6 +758,11 @@
                             </div>
 
                             <div class="vision-wrap">
+
+                                <div class="tit_box">
+                                    <h4><span></span>비전</h4>
+                                </div>
+
                                 <div class="tit-style tit-style1">
                                     <strong class="bul01"><em class="point5">(사)한국액셀러레이터협회</em><br>회원사의 성공으로 대한민국 액셀러레이터 생태계를 견인</strong>
                                 </div>
@@ -778,6 +783,17 @@
                                     <div class="tit-style tit-style1">
                                         <strong class="bul01" style="font-size: 1.65rem;">2022. 액셀러레이터 모두가 함께 성장하는 행복한 창업투자 생태계</strong>
                                     </div>
+                                </div>
+                            </div>
+
+                            <div class="vision-wrap">
+                                
+                                <div class="tit_box">
+                                    <h4><span></span>슬로건</h4>
+                                </div>
+
+                                <div class="vision-slogan">
+                                    <span class="vision-slogan__img"> <img src="https://www.k-ac.or.kr/webroot/images/korean/sub/vision-slogan.JPG" alt="Accelerate Together"> </span> <strong class="vision-slogan__title">창업투자 생태계 리딩 주체로서 모든 액셀러레이터, 스타트업, 창업유관기관이 함께 성장하고 행복한 창업투자생태계 조성하며 회원사와 오래, 그리고 멀리 함께 가는 협회이고자함을 의미</strong>
                                 </div>
                             </div>
 
