--- a/portal/html/USR-1335-B-DTL.html
+++ b/portal/html/USR-1335-B-DTL.html
@@ -256,7 +256,7 @@
                             <li><a href="./USR-1311-H-CONTN.html">BI소개</a></li>
                             <li><a href="./USR-1320-B-LIST.html">공지사항</a></li>
                             <li><a href="./USR-1341-F-LIST.html">벤처투자 TALK</a></li>
-                            <!-- <li><a href="./USR-1350-F-DASH.html">벤처투자 불법신고</a></li> -->
+                            <li><a href="./USR-1350-F-DASH.html">벤처투자 불법신고</a></li>
                             <li><a href="./USR-1361-H-CONTN.html">유관기관 안내</a></li>
                         </ul>
                     </li>
