투자자검색-padding값 수정

--- a/pub_list.html
+++ b/pub_list.html
@@ -138,7 +138,7 @@
                     date:'',
                     mdate:'',
                     con:'',
-                    etc:''
+                    etc:'1. (11/21)헤더 3depth 삭제 및 정리<br/>2. (11/21)서브페이지 헤더 서브타이틀 삭제'
                 },
 
                 // 요청
@@ -160,7 +160,7 @@
                     date:'',
                     mdate:'',
                     con:'완료',
-                    etc:''
+                    etc:'1. (11/21)마이메뉴 삭제<br/>2. (11/21)비디오 html태그 수정<br/>3. (11/21)추천검색어 목록 수정<br/>4. (11/21)인기검색어 5개로 수정<br/>5. (11/21)전자공시 시간 빼기'
                 },
                 {
                     division: '',
@@ -189,7 +189,7 @@
                     date:'2022-08-25',
                     mdate:'2022-09-05',
                     con:'완료',
-                    etc:'[스타일가이드]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -198,7 +198,7 @@
                     date:'2022-08-30',
                     mdate:'2022-09-05',
                     con:'완료',
-                    etc:'[스타일가이드] 펀드정보[2차디자인]'
+                    etc:'펀드정보'
                 },
                 {
                     division: '',
@@ -207,7 +207,7 @@
                     date:'2022-08-30',
                     mdate:'2022-09-05',
                     con:'완료',
-                    etc:'[스타일가이드]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -216,7 +216,7 @@
                     date:'2022-08-31',
                     mdate:'2022-09-05',
                     con:'완료',
-                    etc:'[스타일가이드]'
+                    etc:''
                 },
                 // <span class="none"></span>1018 내정보관리에서 진행
                 { 
@@ -379,7 +379,7 @@
                     date:'2022-08-29',
                     mdate:'2022-09-26',
                     con:'완료',
-                    etc:'[게시판 타입1 - 목록]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -388,7 +388,7 @@
                     date:'2022-08-29',
                     mdate:'2022-09-26',
                     con:'완료',
-                    etc:'[게시판 타입1 - 상세]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -426,7 +426,7 @@
                     date:'',
                     mdate:'2022-09-05',
                     con:'작업중',
-                    etc:'<span class="red">기획서 없음</span><span class="red">컨텐츠 확인 필요</span><span class="blue">디자인 필요</span>[2차디자인]'
+                    etc:'<span class="red">기획서 없음</span><span class="red">컨텐츠 확인 필요</span><span class="blue">디자인 필요</span>'
                 },
                 {
                     division: '',
@@ -444,7 +444,7 @@
                     date:'2022-08-29',
                     mdate:'2022-09-27',
                     con:'완료',
-                    etc:'[게시판 타입 - FAQ]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -453,7 +453,7 @@
                     date:'2022-08-29',
                     mdate:'2022-09-26',
                     con:'완료',
-                    etc:'[1차디자인] [게시판 타입2 - 목록]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -462,7 +462,7 @@
                     date:'2022-08-29',
                     mdate:'2022-09-30',
                     con:'완료',
-                    etc:'[게시판 타입2 - 상세]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -471,7 +471,7 @@
                     date:'2022-09-28',
                     mdate:'2022-10-06',
                     con:'완료',
-                    etc:'<span class="red">컨텐츠 확인필요</span>[2차디자인]'
+                    etc:'<span class="red">컨텐츠 확인필요</span>'
                 },
                 {
                     division: '',
@@ -509,7 +509,7 @@
                     date:'2022-11-08',
                     mdate:'2022-10-14',
                     con:'완료',
-                    etc:''
+                    etc:'(11/21)정렬/분야별정책 ul 수정'
                 },
                 {
                     division: '',
@@ -518,7 +518,7 @@
                     date:'2022-09-20',
                     mdate:'2022-10-18',
                     con:'완료',
-                    etc:'[1차디자인]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -527,7 +527,7 @@
                     date:'2022-09-23',
                     mdate:'2022-10-11',
                     con:'완료',
-                    etc:'[2차디자인]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -536,7 +536,7 @@
                     date:'2022-09-23',
                     mdate:'2022-10-11',
                     con:'완료',
-                    etc:'[2차디자인]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -545,7 +545,7 @@
                     date:'2022-08-29',
                     mdate:'2022-09-13',
                     con:'완료',
-                    etc:'[게시판 타입1 - 목록]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -554,7 +554,7 @@
                     date:'2022-08-29',
                     mdate:'2022-09-13',
                     con:'완료',
-                    etc:'[게시판 타입1 - 상세]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -563,7 +563,7 @@
                     date:'2022-08-30',
                     mdate:'2022-09-16',
                     con:'완료',
-                    etc:'[게시판 타입 - 뉴스레터]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -572,7 +572,7 @@
                     date:'2022-08-29',
                     mdate:'2022-09-21',
                     con:'완료',
-                    etc:'[게시판 타입1 - 목록]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -581,7 +581,7 @@
                     date:'2022-08-29',
                     mdate:'',
                     con:'완료',
-                    etc:'[게시판 타입1 - 목록]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -590,7 +590,7 @@
                     date:'2022-08-29',
                     mdate:'2022-09-26',
                     con:'완료',
-                    etc:'[게시판 타입1 - 상세]'
+                    etc:''
                 },
                 // <span class="none"></span>1018 제공할 프로그램 미존재로 삭제
                 {
@@ -645,7 +645,7 @@
                     date:'2022-09-14',
                     mdate:'2022-11-01',
                     con:'완료',
-                    etc:'[1차디자인]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -654,7 +654,7 @@
                     date:'2022-09-14',
                     mdate:'2022-11-01',
                     con:'완료',
-                    etc:'[1차디자인]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -663,7 +663,7 @@
                     date:'2022-09-15',
                     mdate:'2022-11-09',
                     con:'완료',
-                    etc:'[2차디자인]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -681,7 +681,7 @@
                     date:'2022-09-15',
                     mdate:'2022-10-24',
                     con:'완료',
-                    etc:'[2차디자인]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -701,16 +701,16 @@
                     date:'2022-10-04',
                     mdate:'2022-11-08',
                     con:'완료',
-                    etc:''
+                    etc:'(11/21)BI다운로드 파일정리'
                 },
                 {
                     division: '',
-                    depth1:'BI소개',
+                    depth1:'포털소개 - BI소개',
                     path:'./portal/html/USR-1311-H-CONTN.html',
                     date:'2022-11-17',
                     mdate:'',
                     con:'완료',
-                    etc:''
+                    etc:'(11/21)BI소개 메뉴 따로빼기'
                 },
                 {
                     division: '',
@@ -719,7 +719,7 @@
                     date:'2022-08-29',
                     mdate:'2022-11-11',
                     con:'완료',
-                    etc:'[게시판 타입1 - 목록]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -728,7 +728,7 @@
                     date:'2022-08-29',
                     mdate:'2022-11-11',
                     con:'완료',
-                    etc:'[게시판 타입1 - 상세]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -737,7 +737,7 @@
                     date:'2022-09-05',
                     mdate:'2022-09-07',
                     con:'완료',
-                    etc:'[1차디자인]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -746,7 +746,7 @@
                     date:'2022-09-22',
                     mdate:'2022-09-15',
                     con:'완료',
-                    etc:'[1차디자인]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -755,7 +755,7 @@
                     date:'2022-09-22',
                     mdate:'2022-09-15',
                     con:'완료',
-                    etc:'[1차디자인]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -764,7 +764,7 @@
                     date:'2022-09-22',
                     mdate:'2022-09-30',
                     con:'완료',
-                    etc:'[1차디자인]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -773,7 +773,7 @@
                     date:'2022-09-22',
                     mdate:'2022-09-27',
                     con:'완료',
-                    etc:'[1차디자인]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -782,7 +782,7 @@
                     date:'2022-08-30',
                     mdate:'2022-10-07',
                     con:'완료',
-                    etc:'[1차디자인][게시판 타입1 - 목록]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -791,7 +791,7 @@
                     date:'2022-10-18',
                     mdate:'',
                     con:'완료',
-                    etc:'[게시판 타입1 - 상세]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -800,7 +800,7 @@
                     date:'2022-10-18',
                     mdate:'',
                     con:'완료',
-                    etc:'[게시판 타입1 - 등록/수정]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -809,7 +809,7 @@
                     date:'2022-10-18',
                     mdate:'',
                     con:'완료',
-                    etc:'[게시판 타입1 - 상세]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -818,7 +818,7 @@
                     date:'2022-10-18',
                     mdate:'',
                     con:'완료',
-                    etc:'[게시판 타입1 - 등록/수정]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -827,7 +827,7 @@
                     date:'2022-10-18',
                     mdate:'',
                     con:'완료',
-                    etc:'[게시판 타입1 - 상세]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -836,7 +836,7 @@
                     date:'2022-10-18',
                     mdate:'',
                     con:'완료',
-                    etc:'[게시판 타입1 - 등록/수정]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -845,7 +845,7 @@
                     date:'2022-09-15',
                     mdate:'2022-09-29',
                     con:'완료',
-                    etc:'[1차디자인] 탭확인필요'
+                    etc:' 탭확인필요'
                 },
                 {
                     division: '',
@@ -863,7 +863,7 @@
                     date:'2022-09-16',
                     mdate:'2022-10-19',
                     con:'완료',
-                    etc:'[스타일가이드] [2차디자인]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -890,7 +890,7 @@
                     date:'2022-09-21',
                     mdate:'2022-11-08',
                     con:'완료',
-                    etc:'[2차디자인]'
+                    etc:'(11/21)홈페이지바로가기 전부 추가 및 상단위치정렬 및 액셀러레이터 내용추가'
                 },
 
                 // 회원
@@ -901,7 +901,7 @@
                     date:'2022-09-05',
                     mdate:'2022-11-10',
                     con:'완료',
-                    etc:'[1차디자인]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -919,7 +919,7 @@
                     date:'2022-09-05',
                     mdate:'2022-11-10',
                     con:'완료',
-                    etc:'[1차디자인]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -928,7 +928,7 @@
                     date:'2022-09-05',
                     mdate:'2022-11-10',
                     con:'완료',
-                    etc:'[1차디자인]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -937,7 +937,7 @@
                     date:'2022-09-05',
                     mdate:'2022-11-10',
                     con:'완료',
-                    etc:'[1차디자인]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -946,7 +946,7 @@
                     date:'2022-09-06',
                     mdate:'2022-11-10',
                     con:'완료',
-                    etc:'[1차디자인]사용자정보-기업 추가정보입력으로 변경'
+                    etc:'사용자정보-기업 추가정보입력으로 변경'
                 },
                 {
                     division: '',
@@ -955,7 +955,7 @@
                     date:'2022-09-05',
                     mdate:'2022-11-10',
                     con:'완료',
-                    etc:'[1차디자인]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -964,7 +964,7 @@
                     date:'2022-09-06',
                     mdate:'2022-11-18',
                     con:'완료',
-                    etc:'[스타일가이드] '
+                    etc:''
                 },
                 {
                     division: '',
@@ -973,7 +973,7 @@
                     date:'2022-09-06',
                     mdate:'2022-11-01',
                     con:'완료',
-                    etc:'[1차디자인]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -982,7 +982,7 @@
                     date:'2022-09-19',
                     mdate:'2022-11-01',
                     con:'완료',
-                    etc:'[1차디자인]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -991,7 +991,7 @@
                     date:'2022-09-07',
                     mdate:'2022-11-07',
                     con:'완료',
-                    etc:'[스타일가이드] '
+                    etc:''
                 },
                 {
                     division: '',
@@ -1018,7 +1018,7 @@
                     date:'2022-09-07',
                     mdate:'2022-11-22',
                     con:'완료',
-                    etc:'[1차디자인]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -1119,7 +1119,7 @@
                     date:'2022-09-13',
                     mdate:'2022-11-07',
                     con:'완료',
-                    etc:'[1차디자인]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -1139,7 +1139,7 @@
                     date:'2022-09-23',
                     mdate:'2022-11-28',
                     con:'완료',
-                    etc:'[2차디자인]'
+                    etc:''
                 },
 
                 // 사이트맵
@@ -1150,7 +1150,7 @@
                     date:'2022-09-23',
                     mdate:'2022-11-15',
                     con:'완료',
-                    etc:'[1차디자인]'
+                    etc:''
                 },
 
                 // footer
@@ -1170,7 +1170,7 @@
                     date:'2022-10-20',
                     mdate:'2022-12-01',
                     con:'완료',
-                    etc:'[2차디자인]'
+                    etc:''
                 },
                 {
                     division: '',
@@ -1188,7 +1188,7 @@
                     date:'2022-10-31',
                     mdate:'',
                     con:'완료',
-                    etc:'[2차디자인]'
+                    etc:''
                 },
                 // <span class="none"></span>1018 footer 콤보박스 바로가기로 대체
                 {
