고객 요청사항 수정

--- a/portal/html/USR-1010-F-DTL.html
+++ b/portal/html/USR-1010-F-DTL.html
@@ -297,8 +297,12 @@
                                         <span>2010-01-01 (9년 11개월)</span>
                                     </li>
                                     <li>
-                                        <span>TEL. 02-1234-4566</span>
-                                        <span>FAX. 02-1234-4567</span>
+                                        <span>TEL.</span>
+                                        <span>02-1234-4567</span>
+                                    </li>
+                                    <li>
+                                        <span>FAX.</span>
+                                        <span>02-1234-4567</span>
                                     </li>
                                     <li>
                                         <span>투자희망금액</span>
@@ -317,7 +321,7 @@
                         </div>
                         <div class="bottom">
                             <ul>
-                                <li>last update 2022-07-01</li>
+                                <li>Last Update 2022-07-01</li>
                                 <li>
                                     <div class="btn_box">
                                         <button class="btn_skyblue shadow dialog-link" data-target="#note_01">IR 자료 요청</button>
