--- a/portal/html/USR-1020-F-DTL.html
+++ b/portal/html/USR-1020-F-DTL.html
@@ -282,16 +282,16 @@
                     <div class="info">
                         <ul>
                             <li>
-                                <span>설립일 2021-01-01 (3년 7개월)</span>
-                                <span>135,124억 운용금액</span>
+                                <span><strong>설립일</strong> 2021-01-01 (3년 7개월)</span>
+                                <span><strong>운용규모</strong>135,124억원</span>
                             </li>
                             <li>
-                                <span>TEL 02-0000-0000</span>
-                                <span>FAX 02-2222-2222</span>
-                                <span>서울시 강남구 선릉로 129 4층</span>
+                                <span><strong>TEL</strong>02-0000-0000</span>
+                                <span><strong>FAX</strong>02-2222-2222</span>
+                                <span><strong>주소</strong>서울시 강남구 선릉로 129 4층</span>
                             </li>
                             <li>
-                                <span>https://www.lbi.co.kr</span>
+                                <span><strong>홈페이지</strong>https://www.lbi.co.kr</span>
                             </li>
                         </ul>
                     </div>
