--- a/pub_list.html
+++ b/pub_list.html
@@ -198,7 +198,7 @@
                     date:'2022-08-30',
                     mdate:'2022-09-05',
                     con:'완료',
-                    etc:'펀드정보'
+                    etc:'(11/21)상세 소제목 수정'
                 },
                 {
                     division: '',
@@ -216,7 +216,7 @@
                     date:'2022-08-31',
                     mdate:'2022-09-05',
                     con:'완료',
-                    etc:''
+                    etc:'(11/21)상세 소제목 수정'
                 },
                 // <span class="none"></span>1018 내정보관리에서 진행
                 { 
@@ -527,7 +527,7 @@
                     date:'2022-09-23',
                     mdate:'2022-10-11',
                     con:'완료',
-                    etc:''
+                    etc:'(11/21) 탭 삭제'
                 },
                 {
                     division: '',
