--- a/portal/html/main.html
+++ b/portal/html/main.html
@@ -28,8 +28,8 @@
     <link rel="icon" href="../images/favicon/favicon-48.png" sizes="48x48"> 
     <link rel="icon" href="../images/favicon/favicon-64.png" sizes="64x64"> 
     <link rel="icon" href="../images/favicon/favicon-128.png" sizes="128x128">
-    <link rel="apple-touch-icon" href="../images/favicon.ico">
-    <link rel="shortcut icon" href="../images/favicon.ico">
+    <link rel="apple-touch-icon" href="../images/favicon/favicon-144.png">
+    <link rel="shortcut icon" href="../images/favicon/favicon-144.png">
     <link rel="icon" href="../images/favicon.ico">
 
 </head>
