--- a/portal/html/main.html
+++ b/portal/html/main.html
@@ -1627,5 +1627,27 @@
     <!-- //pop_content -->
 
 </div>
+
+<!-- 기본 레이어 팝업 -->
+<div class="layer-popup" id="layer_popup_6" style=" z-index : 99998; position:absolute; top:0px; left:235px;">
+    <img class="layer-popup-image" src="../images/noimage/news/noimage_news.jpg" alt="팝업">
+    <div class="not-today">
+        <input class="not-today-6" id="not_today_6" type="checkbox" name="notToday" value="1">
+        <label class="not-today-6" for="not_today_6">오늘 하루 보지 않기</label>
+        <a href="" class="layer-close"><img src="http://192.168.0.30/design/common/images/asset/close.png" alt="닫기"></a>
+    </div>
+</div>
+<!-- 기본 레이어 팝업 -->
+<div class="layer-popup" id="layer_popup_7" style=" z-index : 99998; position:absolute; top:400px; left:0px;">
+    <img class="layer-popup-image" src="http://192.168.0.30/web/portal/file/image/uu/02c9412187a94086a79add757f27dc86" alt="팝업">
+    <div class="layer-link-wrap">
+        <a class="layer-link" href="https://www.naver.com" target="_blank">바로가기</a>
+    </div>
+    <div class="not-today">
+        <input class="not-today-6" id="not_today_6" type="checkbox" name="notToday" value="1">
+        <label class="not-today-6" for="not_today_6">오늘 하루 보지 않기</label>
+        <a href="" class="layer-close"><img src="http://192.168.0.30/design/common/images/asset/close.png" alt="닫기"></a>
+    </div>
+</div>
 </body>
 </html>
