--- a/pub_list.html
+++ b/pub_list.html
@@ -160,7 +160,7 @@
                     date:'',
                     mdate:'',
                     con:'완료',
-                    etc:'1. (11/21)마이메뉴 삭제<br/>2. (11/21)비디오 html태그 수정<br/>3. (11/21)추천검색어 목록 수정<br/>4. (11/21)인기검색어 5개로 수정<br/>5. (11/21)전자공시 시간 빼기'
+                    etc:'1. (11/21)마이메뉴 삭제<br/>2. (11/21)비디오 html태그 수정<br/>3. (11/21)추천검색어 목록 수정<br/>4. (11/21)인기검색어 5개로 수정<br/>5. (11/21)전자공시 시간 빼기<br/>6.레이어팝업추가'
                 },
                 {
                     division: '',
@@ -1231,27 +1231,27 @@
                     division: '',
                     depth1:'커뮤니티 목록 상세',
                     path:'../cms/index35.html',
-                    date:'',
+                    date:'2022-11-22',
                     mdate:'',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
                 {
                     division: '',
                     depth1:'커뮤니티 공지사항',
                     path:'../cms/index36.html',
-                    date:'',
+                    date:'2022-11-22',
                     mdate:'',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
                 {
                     division: '',
                     depth1:'커뮤니티 공지사항 상세',
-                    path:'../cms/',
-                    date:'',
+                    path:'../cms/index36-1.html',
+                    date:'2022-11-22',
                     mdate:'',
-                    con:'작업중',
+                    con:'완료',
                     etc:''
                 },
                 {
